working on serializers/still building api
