# db/schema.rb
@@ -10,65 +10,64 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema.define(version: 2023_06_16_150846) do
-
+ActiveRecord::Schema.define(version: 20_230_616_150_846) do
   # These are extensions that must be enabled in order to support this database
-  enable_extension "plpgsql"
+  enable_extension 'plpgsql'
 
-  create_table "matched_skills", force: :cascade do |t|
-    t.bigint "user_id"
-    t.bigint "skill_id"
-    t.datetime "created_at", null: false
-    t.datetime "updated_at", null: false
-    t.integer "proficiency"
-    t.integer "endorsements"
-    t.index ["skill_id"], name: "index_matched_skills_on_skill_id"
-    t.index ["user_id"], name: "index_matched_skills_on_user_id"
+  create_table 'matched_skills', force: :cascade do |t|
+    t.bigint 'user_id'
+    t.bigint 'skill_id'
+    t.datetime 'created_at', null: false
+    t.datetime 'updated_at', null: false
+    t.integer 'proficiency'
+    t.integer 'endorsements'
+    t.index ['skill_id'], name: 'index_matched_skills_on_skill_id'
+    t.index ['user_id'], name: 'index_matched_skills_on_user_id'
   end
 
-  create_table "skills", force: :cascade do |t|
-    t.string "name"
-    t.datetime "created_at", null: false
-    t.datetime "updated_at", null: false
-    t.text "description"
+  create_table 'skills', force: :cascade do |t|
+    t.string 'name'
+    t.datetime 'created_at', null: false
+    t.datetime 'updated_at', null: false
+    t.text 'description'
   end
 
-  create_table "tickets", force: :cascade do |t|
-    t.string "title"
-    t.text "description"
-    t.integer "status"
-    t.string "assignee"
-    t.datetime "created_at", null: false
-    t.datetime "updated_at", null: false
-    t.bigint "user_id"
-    t.index ["user_id"], name: "index_tickets_on_user_id"
+  create_table 'tickets', force: :cascade do |t|
+    t.string 'title'
+    t.text 'description'
+    t.integer 'status'
+    t.string 'assignee'
+    t.datetime 'created_at', null: false
+    t.datetime 'updated_at', null: false
+    t.bigint 'user_id'
+    t.index ['user_id'], name: 'index_tickets_on_user_id'
   end
 
-  create_table "user_skills", force: :cascade do |t|
-    t.bigint "user_id", null: false
-    t.bigint "skill_id", null: false
-    t.datetime "created_at", null: false
-    t.datetime "updated_at", null: false
-    t.bigint "matched_skill_id"
-    t.index ["matched_skill_id"], name: "index_user_skills_on_matched_skill_id"
-    t.index ["skill_id"], name: "index_user_skills_on_skill_id"
-    t.index ["user_id"], name: "index_user_skills_on_user_id"
+  create_table 'user_skills', force: :cascade do |t|
+    t.bigint 'user_id', null: false
+    t.bigint 'skill_id', null: false
+    t.datetime 'created_at', null: false
+    t.datetime 'updated_at', null: false
+    t.bigint 'matched_skill_id'
+    t.index ['matched_skill_id'], name: 'index_user_skills_on_matched_skill_id'
+    t.index ['skill_id'], name: 'index_user_skills_on_skill_id'
+    t.index ['user_id'], name: 'index_user_skills_on_user_id'
   end
 
-  create_table "users", force: :cascade do |t|
-    t.string "email", default: "", null: false
-    t.string "encrypted_password", default: "", null: false
-    t.string "reset_password_token"
-    t.datetime "reset_password_sent_at"
-    t.datetime "remember_created_at"
-    t.datetime "created_at", null: false
-    t.datetime "updated_at", null: false
-    t.index ["email"], name: "index_users_on_email", unique: true
-    t.index ["reset_password_token"], name: "index_users_on_reset_password_token", unique: true
+  create_table 'users', force: :cascade do |t|
+    t.string 'email', default: '', null: false
+    t.string 'encrypted_password', default: '', null: false
+    t.string 'reset_password_token'
+    t.datetime 'reset_password_sent_at'
+    t.datetime 'remember_created_at'
+    t.datetime 'created_at', null: false
+    t.datetime 'updated_at', null: false
+    t.index ['email'], name: 'index_users_on_email', unique: true
+    t.index ['reset_password_token'], name: 'index_users_on_reset_password_token', unique: true
   end
 
-  add_foreign_key "matched_skills", "skills"
-  add_foreign_key "matched_skills", "users"
-  add_foreign_key "tickets", "users"
-  add_foreign_key "user_skills", "matched_skills"
+  add_foreign_key 'matched_skills', 'skills'
+  add_foreign_key 'matched_skills', 'users'
+  add_foreign_key 'tickets', 'users'
+  add_foreign_key 'user_skills', 'matched_skills'
 end
